# auto-match-pull

./: .gitignore  LICENSE  MANIFEST.in  PRIVACY.md  README.md  README.sync-conflict-20250718-155452-YOXBV6C.md  README_deployment.md  deploy.sh  env_setup_example.sh  pyproject.toml  requirements.txt  setup.py
auto_match_pull/: __init__.py  cli.py
auto_match_pull/core/: database.py
auto_match_pull/services/: git_service.py  scheduler.py
macos/: com.ape147.auto-match-pull.plist.template  install.sh
scripts/: install.sh
scripts/macos/launchd/: com.ape147.auto-match-pull.plist.template
src/auto_match_pull/: __main__.py  cli.py
src/auto_match_pull/core/: database.py  matcher.py
src/auto_match_pull/services/: scheduler.py
